--- a/projects/fine_tuning/testing/config.yaml
+++ b/projects/fine_tuning/testing/config.yaml
@@ -163,6 +163,33 @@ ci_presets:
       hyper_parameters:
         raw_lists: {target_modules: ["q_attn", "v_proj"]}
 
+  mlperf_lora:
+    extends: [hf_evaluation, dgx_small_footprint]
+    tests.fine_tuning.test_settings.model_name: null
+    tests.fine_tuning.test_settings.dataset_name: alpaca.json  # this would be different
+    tests.fine_tuning.test_settings.dataset_replication: 0.2
+    tests.fine_tuning.test_settings.gpu: [2, 4]
+    tests.fine_tuning.test_settings.hyper_parameters:
+      peft_method: "lora"
+      torch_dtype: bfloat16
+      use_flash_attn: true
+      max_steps: -1
+      per_device_train_batch_size: [1]
+      max_seq_length: [512]
+      gradient_accumulation_steps: 4
+      warmup_ratio: 0.03
+      num_train_epochs: 1
+      gradient_checkpointing: true
+      packing: false
+      r: 4
+      lora_alpha: 16
+    tests.fine_tuning.test_extra_settings:
+    - name: llama2-70b
+      model_name:
+      - llama/Llama-2-7b-hf
+      hyper_parameters:
+        raw_lists: {target_modules: ["q_attn", "v_proj"]}
+
   dgx_multi_model_8:
     extends: [multi_model]
     fine_tuning.model_registry: hf
