--- a/projects/rhods/toolbox/rhods_deploy_ods/tasks/main.yml
+++ b/projects/rhods/toolbox/rhods_deploy_ods/tasks/main.yml
@@ -103,7 +103,7 @@
   command:
     oc get DSCInitialization -oname
   register: has_dsci_cmd
-  until: has_dsci_cmd.stdout
+  until: has_dsci_cmd.stdout | length > 0
   retries: 60
   delay: 10
 
